# discord-ttsbot-local

./: .gitignore  AGENTS.md  README.md  bot.py  pyproject.toml  start.bat  start.sh
voxcpm_discord/: __init__.py  app.py  bot.py  cog.py  config.py  discord_helpers.py  profiles.py  sessions.py  text.py  tts.py
