[project]
name = "voxcpm-discord-bot"
version = "0.1.0"
description = "Discord voice bot using VoxCPM2 and discord.py"
requires-python = ">=3.11,<3.13"
dependencies = [
  "discord.py[voice]>=2.4.0",
  "huggingface_hub",
  "soundfile>=0.13.1",
  "torch",
  "torchaudio",
  "voxcpm",
]

[project.scripts]
voxcpm-discord-bot = "voxcpm_discord.app:main"
voxcpm-discord-hi = "voxcpm_discord.app:hi_main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["bot.py", "voxcpm_discord"]
