[project]
name = "discord-ttsbot-local"
version = "0.1.0"
description = "Local Discord TTS bot with selectable Supertonic 3 or VoxCPM engines"
requires-python = ">=3.11,<3.13"
dependencies = [
  "discord.py[voice]>=2.4.0",
  "supertonic",
]

[project.optional-dependencies]
voxcpm = [
  "huggingface_hub",
  "soundfile>=0.13.1",
  "torch",
  "torchaudio",
  "voxcpm",
]

[project.scripts]
discord-ttsbot-local = "voxcpm_discord.app:main"
discord-ttsbot-local-hi = "voxcpm_discord.app:hi_main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["bot.py", "voxcpm_discord"]
